# swipe-smart-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TEST_QUERIES.md  main.py  mcp_server.py  pyproject.toml  run_mcp.sh  server.py
data/: bank_domains.json  categories.json
scripts/: init_db.py  seed.py  test_recommender.py  test_rewards.py  test_tier_matching.py  verify_seed.py
src/: __init__.py  db.py  models.py  rewards.py
src/finance_mcp/: __init__.py  database.py  models.py  tools.py
src/financial_mcp/: __init__.py  analytics.py  database.py  models.py  server.py
src/logic/: __init__.py  recommender.py  rewards.py
