[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-mcp-server"
version = "0.1.0"
description = "MCP server for financial tracking and credit card reward optimization"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src/finance_mcp"]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/financial-mcp-server"
Repository = "https://github.com/YOUR_USERNAME/financial-mcp-server.git"
Issues = "https://github.com/YOUR_USERNAME/financial-mcp-server/issues"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501", "N805"]  # N805: First argument should be named 'self' (ignore for Pydantic validators)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=finance_mcp --cov-report=term-missing"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
