[project]
name = "financial-mcp-server"
version = "0.1.0"
description = "MCP server for credit card rewards tracking and optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.25.0",
    "sqlmodel>=0.0.30",
    "ddgs>=7.0.0",
]

[tool.setuptools]
packages = ["src", "src.logic", "scripts"]
