[project]
name = "swipe-smart-mcp"
version = "0.1.0"
description = "AI-powered credit card rewards optimizer - always swipe the right card"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.25.0",
    "sqlmodel>=0.0.30",
    "ddgs>=7.0.0",
]

[tool.setuptools]
packages = ["src", "src.logic", "scripts"]
